[gd_scene load_steps=8 format=3 uid="uid://dkrdjtyb1p88n"]

[ext_resource type="Script" path="res://scenes/screens/levels/units/DefaultUnit.gd" id="1_vdjhd"]
[ext_resource type="Texture2D" uid="uid://ixa58p2rs7m1" path="res://img/knight.png" id="2_bl1id"]
[ext_resource type="Script" path="res://scenes/screens/levels/units/CollisionArea.gd" id="4_gcuuy"]
[ext_resource type="PackedScene" uid="uid://ckpuh02hucwvd" path="res://components/HealthComponent.tscn" id="4_oq3j3"]
[ext_resource type="PackedScene" uid="uid://bsghedd31qfoa" path="res://components/movement_comp/movement_comp.tscn" id="6_0pp86"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3ojo"]
size = Vector2(50, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_840qd"]
size = Vector2(49.75, 49.125)

[node name="basic_unit" type="AnimatableBody2D" groups=["living_units"]]
z_index = 9
collision_mask = 25
input_pickable = true
script = ExtResource("1_vdjhd")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
offset_right = 50.0
offset_bottom = 50.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(25, 24)
texture = ExtResource("2_bl1id")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="UnitStatsBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 50.0
offset_right = 1.0
offset_bottom = 50.0

[node name="ColorRect" type="ColorRect" parent="UnitStatsBar"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 0
offset_right = 48.0
offset_bottom = 74.0
color = Color(0.168627, 0.137255, 0.054902, 0.360784)

[node name="VBoxContainer" type="VBoxContainer" parent="UnitStatsBar"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 74.0

[node name="Health" type="Label" parent="UnitStatsBar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Health:"

[node name="Actions" type="Label" parent="UnitStatsBar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Actions:"

[node name="Attacks" type="Label" parent="UnitStatsBar/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Attacks:"

[node name="HealthComponent" parent="." instance=ExtResource("4_oq3j3")]
position = Vector2(-8, -8)

[node name="CollisionArea" type="Area2D" parent="."]
visibility_layer = 61
collision_mask = 25
script = ExtResource("4_gcuuy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
visibility_layer = 25
position = Vector2(25, 25.5)
shape = SubResource("RectangleShape2D_n3ojo")
debug_color = Color(0.835294, 0.301961, 0.623529, 0.419608)

[node name="movement_comp" parent="." instance=ExtResource("6_0pp86")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_840qd")

[node name="ActionComponent" type="Node2D" parent="."]
light_mask = 2
position = Vector2(25, 24)

[node name="OutlinePolygon" type="Polygon2D" parent="."]
z_index = 10
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(0, 50, 50, 50, 50, 0, 0, 0)

[node name="RemainMovementLabel" type="Label" parent="."]
z_index = 20
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Remain 
Movement:"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="hp_changed" from="HealthComponent" to="." method="_on_health_component_hp_changed"]
[connection signal="remain_movement_changed" from="movement_comp" to="." method="___on_movement_changed"]
